Update about section

--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
         </p>
         <p>
           I don't just write code; I strive to write <i>clean, efficient, and maintainable</i> code. I am actively
-          upskilling in <b>Generative AI</b> to stay ahead of the curve.
+          upskilling and building <b>clean, fast, and responsive web applications</b> while continuously strengthening my <b>problem-solving skills</b> to stay ahead of the curve.
         </p>
       </div>
       <div class="stats-grid">
